--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </section>
 
     </main>
-    <footer>
+    <footer class="publicidad"
         <section class="contactanos">
             <div class="contactanos-img">
                 <img src="../clase2/img/adidas.jpg" width="200" height="200">
