--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
 <body>
 
-    <header >
+    <header>
         <section class="noticia">
             <div>
                 <a href="./index.html">
-                <h1>PUNTO DEPORTIVO</h1>
+                    <h1>PUNTO DEPORTIVO</h1>
                 </a>
-                    <div>
-                        <nav class="nav">
+                <div>
+                    <nav class="nav">
                         <a href="./pages/zapasadidas.html">
                             <h2>ADIDAS</h2>
                         </a>
@@ -28,13 +28,13 @@
                         </a>
                         <a href="./pages/filaynew.html">
                             <h2>NEW BALANCE Y FILA</h2>
-                         </a>
+                        </a>
                         <a href="./pages/formulario.html">
                             <h2>FORMULARIO</h3>
                         </a>
-                        </nav>
-                    </div>
-            </div>        
+                    </nav>
+                </div>
+            </div>
         </section>
     </header>
 
@@ -44,7 +44,7 @@
         </section>
 
     </main>
-    <footer class="publicidad"
+    <footer>
         <section class="contactanos">
             <div class="contactanos-img">
                 <img src="../clase2/img/adidas.jpg" width="200" height="200">
@@ -52,12 +52,12 @@
                 <img src="../clase2/img/new balance.jpg" width="200" height="200">
                 <img src="../clase2/img/fila.webp" width="200" height="200">
             </div>
-        </section>  
+        </section>
         <section class="contactanos-redes">
             <div class="contactanos-texto">
                 <h3>Contáctanos</h3>
                 <img src="../clase2/img/whatsapp.png " width="50" height="50">
-            </div>    
+            </div>
 
             <div class="flex-redes">
                 <h3>Seguinos</h3>
@@ -65,7 +65,7 @@
                 <img src="../clase2/img/face.png" width="50" height="50">
                 <img src="../clase2/img/twiterr.png" width="50" height="50">
             </div>
-        </section>    
+        </section>
     </footer>
 
 </body>
