--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -37,7 +37,8 @@
         </section>
         </header>
             <main>
-                <form action="">
+                <section class="formulario">
+                <form action="#">
                     <fieldset>
                         <legend> INGRESE SUS DATOS PERSONALES </legend>
                         <label for="Nombre"> Nombre :</label>
@@ -49,7 +50,7 @@
                     </fieldset>
                     <input type="submit">
                 </form>
-
+                </section>
             </main>
 
             <footer>
