modifico ruta de imagenes en index

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <footer>
         <section class="contactanos">
             <div class="contactanos-img">
-                <img src="../clase2/img/adidas.jpg" width="200" height="200">
+                <img src="./assets/img/adidas.jpg" width="200" height="200">
                 <img src="../clase2/img/nike.jpg " width="200" height="200">
                 <img src="../clase2/img/new balance.jpg" width="200" height="200">
                 <img src="../clase2/img/fila.webp" width="200" height="200">
