cambio rutas de imagenes en index

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <main>
         <section class="punto">
-            <img src="../clase2/img/th.webp" width="200" height="250">
+            <img src="../clase2/assets/img/th.webp" width="200" height="250">
         </section>
 
     </main>
@@ -48,22 +48,22 @@
         <section class="contactanos">
             <div class="contactanos-img">
                 <img src="../clase2/assets/img/adidas.jpg" width="200" height="200">
-                <img src="../clase2/img/nike.jpg " width="200" height="200">
-                <img src="../clase2/img/new balance.jpg" width="200" height="200">
-                <img src="../clase2/img/fila.webp" width="200" height="200">
+                <img src="../clase2/assets/img/nike.jpg " width="200" height="200">
+                <img src="../clase2/assets/img/new balance.jpg" width="200" height="200">
+                <img src="../clase2/assets/img/fila.webp" width="200" height="200">
             </div>
         </section>
         <section class="contactanos-redes">
             <div class="contactanos-texto">
                 <h3>Contáctanos</h3>
-                <img src="../clase2/img/whatsapp.png " width="50" height="50">
+                <img src="../clase2/assets/img/whatsapp.png " width="50" height="50">
             </div>
 
             <div class="flex-redes">
                 <h3>Seguinos</h3>
-                <img src="../clase2/img/insta.jpg " width="50" height="50">
-                <img src="../clase2/img/face.png" width="50" height="50">
-                <img src="../clase2/img/twiterr.png" width="50" height="50">
+                <img src="../clase2/assets/img/insta.jpg " width="50" height="50">
+                <img src="../clase2/assets/img/face.png" width="50" height="50">
+                <img src="../clase2/assets/img/twiterr.png" width="50" height="50">
             </div>
         </section>
     </footer>
