--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
 
     <main>
         <section class="punto">
-            <img src="../clase2/assets/img/th.webp" width="200" height="250">
+            <img src="./assets/img/th.webp" width="200" height="250">
         </section>
 
     </main>
     <footer>
         <section class="contactanos">
             <div class="contactanos-img">
-                <img src="../clase2/assets/img/adidas.jpg" width="200" height="200">
-                <img src="../clase2/assets/img/nike.jpg " width="200" height="200">
-                <img src="../clase2/assets/img/new balance.jpg" width="200" height="200">
-                <img src="../clase2/assets/img/fila.webp" width="200" height="200">
+                <img src="./assets/img/adidas.jpg" width="200" height="200">
+                <img src="./assets/img/nike.jpg " width="200" height="200">
+                <img src="./assets/img/new balance.jpg" width="200" height="200">
+                <img src="./assets/img/fila.webp" width="200" height="200">
             </div>
         </section>
         <section class="contactanos-redes">
