modificacion en html

--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -56,23 +56,23 @@
             <footer>
                 <section class="contactanos">
                     <div class="contactanos-img">
-                        <img src="../img/adidas.jpg" width="200" height="200">
-                        <img src="../img/nike.jpg " width="200" height="200">
-                        <img src="../img/new balance.jpg" width="200" height="200">
-                        <img src="../img/fila.webp" width="200" height="200">
+                        <img src="../assets/img/adidas.jpg" width="200" height="200">
+                        <img src="../assets/img/nike.jpg " width="200" height="200">
+                        <img src="../assets/img/new balance.jpg" width="200" height="200">
+                        <img src="../assets/img/fila.webp" width="200" height="200">
                     </div>
                 </section>  
                 <section class="contactanos-redes">
                     <div class="contactanos-texto">
                         <h3>Contáctanos</h3>
-                        <img src="../img/whatsapp.png " width="50" height="50">
+                        <img src="../assets/img/whatsapp.png " width="50" height="50">
                     </div>    
         
                     <div class="flex-redes">
                         <h3>Seguinos</h3>
-                        <img src="../img/insta.jpg " width="50" height="50">
-                        <img src="../img/face.png" width="50" height="50">
-                        <img src="../img/twiterr.png" width="50" height="50">
+                        <img src="../assets/img/insta.jpg " width="50" height="50">
+                        <img src="../assets/img/face.png" width="50" height="50">
+                        <img src="../assets/img/twiterr.png" width="50" height="50">
                     </div>
                 </section>    
             </footer>
