--- a/pages/zapasnike.html
+++ b/pages/zapasnike.html
@@ -49,23 +49,23 @@
             </div>
             <div class="river">
 
-                <div> <img src="../img/zapanikerevolutions.webp" alt="zapas nike revolutions" width="80" height="80">
+                <div> <img src="../assets/img/zapanikerevolutions.webp" alt="zapas nike revolutions" width="80" height="80">
 
                     <p>Zapatillas Nike
                         Revolutions
                         $90
                     </p>
                 </div>
-                <div><img src="../img/botinesnike.webp" alt="botines nike" width="80" height="80">
+                <div><img src="../assets/img/botinesnike.webp" alt="botines nike" width="80" height="80">
                     <p> Botines nike vapor
                         $30</p>
                 </div>
-                <div><img src="../img/zapanikeshifer.webp" alt="zapas nike shifer" width="80" height="80">
+                <div><img src="../assets/img/zapanikeshifer.webp" alt="zapas nike shifer" width="80" height="80">
                     <p>Zapatillas Nike
                         Downshifer
                         $32 </p>
                 </div>
-                <div><img src="../img/nikelegend.webp" alt="zapas nike legend" width="80" height="80">
+                <div><img src="../assets/img/nikelegend.webp" alt="zapas nike legend" width="80" height="80">
                     <p>Zapatillas Nike
                         Legend
                         $28 </p>
@@ -79,20 +79,20 @@
             </div>
             <div class="river1">
 
-                <div><img src="../img/nikemujerwinflo.webp" alt="zapas nike air winflo" width="80" height="80"></li>
+                <div><img src="../assets/img/nikemujerwinflo.webp" alt="zapas nike air winflo" width="80" height="80"></li>
                     <p>Zapatillas Nike Air Winflo
                         $49 </p>
                 </div>
-                <div><img src="../img/nikezoom.webp" alt="zapas nike zoom" width="80" height="80 "></li>
+                <div><img src="../assets/img/nikezoom.webp" alt="zapas nike zoom" width="80" height="80 "></li>
                     <p> Zapatillas Nike Zoom
                         $46</p>
                 </div>
-                <div><img src="../img/nikeairmaxmujer.webp" alt="zapas nike air max" width="80" height="80"></li>
+                <div><img src="../assets/img/nikeairmaxmujer.webp" alt="zapas nike air max" width="80" height="80"></li>
                     <p>Zapatillas Nike
                         Air Max
                         $42 </p>
                 </div>
-                <div><img src="../img/nikemaxbellamujer.webp" alt="zapas nike air max bella" width="80" height="80">
+                <div><img src="../assets/img/nikemaxbellamujer.webp" alt="zapas nike air max bella" width="80" height="80">
                     <p> Zapatillas Nike
                         Air Max Bella
                         $39 </p>
@@ -105,23 +105,23 @@
     <footer>
         <section class="contactanos">
             <div class="contactanos-img">
-                <img src="../img/adidas.jpg" width="200" height="200">
-                <img src="../img/nike.jpg " width="200" height="200">
-                <img src="../img/new balance.jpg" width="200" height="200">
-                <img src="../img/fila.webp" width="200" height="200">
+                <img src="../assets/img/adidas.jpg" width="200" height="200">
+                <img src="../assets/img/nike.jpg " width="200" height="200">
+                <img src="../assets/img/new balance.jpg" width="200" height="200">
+                <img src="../assets/img/fila.webp" width="200" height="200">
             </div>
         </section>
         <section class="contactanos-redes">
             <div class="contactanos-texto">
                 <h3>Contáctanos</h3>
-                <img src="../img/whatsapp.png " width="50" height="50">
+                <img src="../assets/img/whatsapp.png " width="50" height="50">
             </div>
 
             <div class="flex-redes">
                 <h3>Seguinos</h3>
-                <img src="../img/insta.jpg " width="50" height="50">
-                <img src="../img/face.png" width="50" height="50">
-                <img src="../img/twiterr.png" width="50" height="50">
+                <img src="../assets/img/insta.jpg " width="50" height="50">
+                <img src="../assets/img/face.png" width="50" height="50">
+                <img src="../assets/img/twiterr.png" width="50" height="50">
             </div>
         </section>
     </footer>
