--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
         <section class="contactanos-redes">
             <div class="contactanos-texto">
                 <h3>Contáctanos</h3>
-                <img src="../clase2/assets/img/whatsapp.png " width="50" height="50">
+                <img src="./assets/img/whatsapp.png " width="50" height="50">
             </div>
 
             <div class="flex-redes">
                 <h3>Seguinos</h3>
-                <img src="../clase2/assets/img/insta.jpg " width="50" height="50">
-                <img src="../clase2/assets/img/face.png" width="50" height="50">
-                <img src="../clase2/assets/img/twiterr.png" width="50" height="50">
+                <img src="./assets/img/insta.jpg " width="50" height="50">
+                <img src="./assets/img/face.png" width="50" height="50">
+                <img src="./assets/img/twiterr.png" width="50" height="50">
             </div>
         </section>
     </footer>
