--- a/pages/zapasadidas.html
+++ b/pages/zapasadidas.html
@@ -40,7 +40,7 @@
     </header>
     <main>
         <section>
-            <img src="../img/adidasbanner.png" alt="logo adidas " width="100%" height="100%">
+            <img src="../assets/img/adidasbanner.png" alt="logo adidas " width="100%" height="100%">
         </section>
 
         <section>
@@ -52,22 +52,22 @@
 
             <div class="river">
 
-                <div><img src="../img/adidasgalaxy.webp" alt="zapas adidas galaxy " width="80" height="80"></li>
+                <div><img src="../assets/img/adidasgalaxy.webp" alt="zapas adidas galaxy " width="80" height="80"></li>
                     <p>Zapatillas Adidas
                         Galaxy
                         $26</p>
                 </div>
-                <div><img src="../img/adidaspureboost.webp" alt="zapas adidas pureboost" width="80" height="80">
+                <div><img src="../assets/img/adidaspureboost.webp" alt="zapas adidas pureboost" width="80" height="80">
                     <p>Zapatillas Adidas
                         Pureboost
                         $28</p>
                 </div>
-                <div><img src="../img/adidascourtflash.webp" alt="zapas adidas courtflash" width="80" height="80">
+                <div><img src="../assets/img/adidascourtflash.webp" alt="zapas adidas courtflash" width="80" height="80">
                     <p>Zapatallias Adidas
                         Courtflash
                         $25</p>
                 </div>
-                <div><img src="../img/adidassupernova.webp" alt="zapas adidas supernova" width="80" height="80">
+                <div><img src="../assets/img/adidassupernova.webp" alt="zapas adidas supernova" width="80" height="80">
                     <p>Zapatillas Adidas
                         Supernova
                         $47</p>
@@ -85,21 +85,21 @@
 
 
             <div class="river1">
-                <div><img src="../img/adidasfarm.webp" alt="zapas adidas farm " width="80" height="80 "></li>
+                <div><img src="../assets/img/adidasfarm.webp" alt="zapas adidas farm " width="80" height="80 "></li>
                     <p>Zapatillas Adidas Farm
                         $29</p>
                 </div>
-                <div><img src="../img/adidasstreetchek.webp" alt="zapas adidas streetchek" width="80" height="80">
+                <div><img src="../assets/img/adidasstreetchek.webp" alt="zapas adidas streetchek" width="80" height="80">
                     <p>Zapatillas Adidas
                         Streetchek
                         $32 </p>
                 </div>
-                <div><img src="../img/adidasracer.webp" width="80" height="80" alt="zapas adidas racer"></li>
+                <div><img src="../assets/img/adidasracer.webp" width="80" height="80" alt="zapas adidas racer"></li>
                     <p>Zapatillas Adidas
                         Racer
                         $34</p>
                 </div>
-                <div><img src="../img/adidasresponce.webp" alt="zapas adidas responce" width="80" height="80">
+                <div><img src="../assets/img/adidasresponce.webp" alt="zapas adidas responce" width="80" height="80">
                     <p>Zapatillas Adidas
                         Responce
                         $34</p>
@@ -113,23 +113,23 @@
     <footer>
         <section class="contactanos">
             <div class="contactanos-img">
-                <img src="../img/adidas.jpg" width="200" height="200">
-                <img src="../img/nike.jpg " width="200" height="200">
-                <img src="../img/new balance.jpg" width="200" height="200">
-                <img src="../img/fila.webp" width="200" height="200">
+                <img src="../assets/img/adidas.jpg" width="200" height="200">
+                <img src="../assets/img/nike.jpg " width="200" height="200">
+                <img src="../assets/img/new balance.jpg" width="200" height="200">
+                <img src="../assets/img/fila.webp" width="200" height="200">
             </div>
         </section>
         <section class="contactanos-redes">
             <div class="contactanos-texto">
                 <h3>Contáctanos</h3>
-                <img src="../img/whatsapp.png " width="50" height="50">
+                <img src="../assets/img/whatsapp.png " width="50" height="50">
             </div>
 
             <div class="flex-redes">
                 <h3>Seguinos</h3>
-                <img src="../img/insta.jpg " width="50" height="50">
-                <img src="../img/face.png" width="50" height="50">
-                <img src="../img/twiterr.png" width="50" height="50">
+                <img src="../assets/img/insta.jpg " width="50" height="50">
+                <img src="../assets/img/face.png" width="50" height="50">
+                <img src="../assets/img/twiterr.png" width="50" height="50">
             </div>
         </section>
     </footer>
