cambio en imagen de banner nike

--- a/pages/filaynew.html
+++ b/pages/filaynew.html
@@ -38,7 +38,7 @@
     <main>
         <section>
         
-            <img src="../assets/img/newbalancebanner.jpg" alt="banner de new balance" width="30%" height="200">
+            <img src="../assets/img/newbalancebanner.jpg" alt="banner de new balance" width="100%">
         </section>
             <div class="river">
             
@@ -62,7 +62,7 @@
                     $35></p></div>
             </div>
             <div>
-            <img src="../assets/img/filabanner.jpg" alt="iamgen de fila " width="30%" height="200">
+            <img src="../assets/img/filabanner.jpg" alt="iamgen de fila " width="100%" >
             </div>
         <section>
             <div class="river1">
