--- a/pages/zapasnike.html
+++ b/pages/zapasnike.html
@@ -39,7 +39,7 @@
 
     <main>
         <section>
-            <img src="../img/nikebanner.png" alt=" banner de nike " width="100%" height="200">
+            <img src="../assets/img/bannernuevonike.png" alt=" banner de nike " width="100%" height="100%">
         </section>
 
         <section>
